<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/all_filter"
        android:title="@string/offers" />
    <item
        android:id="@+id/rate_filter"
        android:title="@string/rating" />
    <item
        android:id="@+id/distance_filter"
        android:title="@string/distance" />
    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />
    <!-- TODO: just for test   -->
    <item
        android:id="@+id/logout"
        android:title="logout" />
</menu>